Fix user avatar alignment

--- a/index.css
+++ b/index.css
@@ -136,7 +136,8 @@ body {
 }
 
 .message.bot { align-self: flex-start; }
-.message.user { align-self: flex-end; }
+.message.user { align-self: flex-end; flex-direction: row-reverse; }
+.message.user .avatar { margin-right: 0; margin-left: 8px; }
 .message.user .bubble {
   background: var(--primary-color);
   color: white;
